Apply some IDE inspections